--- a/public/css/pdf_landscape.css
+++ b/public/css/pdf_landscape.css
@@ -20,17 +20,31 @@ table {
 }
 table td,
 table th {
-	border: 1px solid rgba(0, 0, 0, 0.50);
+	/* border: 1px solid rgba(0, 0, 0, 0.80); */
+	border: 1px solid rgb(51, 126, 193);
 	text-align: justify;
 	font-size: 6pt !important;
 	vertical-align: middle !important;
-	/* padding: 2px 2px !important; */
+	padding: 3px !important;
+	
 }
  
 table th {
-	background-color: #E1E5E5;
+ 
+	background-color: rgb(51, 126, 193);
 	text-align: center;
-	color: black;
+	color: white;
+	/* font-size: 7.5pt !important; */
+	 
+}
+
+table.table-report tr:nth-child(odd) td{
+	background-color: #fff   !important;
+     
+}
+table.table-report tr:nth-child(even) td{
+	background-color: #fff   !important;
+
 }
 table tr td{
     /* max-width:100%; */
